--- a/Deep_Neural_Network.ipynb
+++ b/Deep_Neural_Network.ipynb
@@ -243,8 +243,8 @@
         "\n",
         "    Returns:\n",
         "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
-        "                    Wl -- weight matrix of shape (layer_dims[l], layer_dims[l-1])\n",
-        "                    bl -- bias vector of shape (layer_dims[l], 1)\n",
+        "                    W1 -- weight matrix of shape (layer_dims[l], layer_dims[l-1])\n",
+        "                    b1 -- bias vector of shape (layer_dims[l], 1)\n",
         "    \"\"\"\n",
         "\n",
         "    np.random.seed(1)\n",
