--- a/Deep_Neural_Network.ipynb
+++ b/Deep_Neural_Network.ipynb
@@ -37,9 +37,6 @@
         "plt.rcParams['image.interpolation'] = 'nearest'\n",
         "plt.rcParams['image.cmap'] = 'gray'\n",
         "\n",
-        "%load_ext autoreload\n",
-        "%autoreload 2\n",
-        "\n",
         "np.random.seed(1)"
       ]
     },
@@ -88,7 +85,7 @@
       "metadata": {
         "id": "4Do8HpPr2H7q"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -114,7 +111,7 @@
       "metadata": {
         "id": "E6vm-AP8-CY9"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -149,9 +146,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JcPGtLRa2fGU",
-        "outputId": "c456bd82-ec5d-44d3-9667-f0cfdce68831"
+        "outputId": "e501ec37-3b4a-44f1-e38e-0d90cb7c200f"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HSTC_Q4m1i0A",
-        "outputId": "460a8d4e-a62b-4767-f758-bbe2aca8b4e8"
+        "outputId": "23cb666a-fb65-4d69-87ae-359d8bff9db3"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,8 +240,8 @@
         "\n",
         "    Returns:\n",
         "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
-        "                    W1 -- weight matrix of shape (layer_dims[l], layer_dims[l-1])\n",
-        "                    b1 -- bias vector of shape (layer_dims[l], 1)\n",
+        "                    Wl -- weight matrix of shape (layer_dims[l], layer_dims[l-1])\n",
+        "                    bl -- bias vector of shape (layer_dims[l], 1)\n",
         "    \"\"\"\n",
         "\n",
         "    np.random.seed(1)\n",
@@ -264,7 +261,7 @@
       "metadata": {
         "id": "kMPiXcDw2_ZM"
       },
-      "execution_count": 40,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -293,8 +290,7 @@
         "    cache -- returns Z as well, useful during backpropagation\n",
         "    \"\"\"\n",
         "    A = 1/(1+np.exp(-Z))\n",
-        "    cache = Z\n",
-        "    return A, cache\n",
+        "    return A, Z\n",
         "\n",
         "def relu(Z):\n",
         "    \"\"\"\n",
@@ -308,10 +304,8 @@
         "    cache -- a python dictionary containing \"A\" ; stored for computing the backward pass efficiently\n",
         "    \"\"\"\n",
         "    A = np.maximum(0,Z)\n",
-        "    assert(A.shape == Z.shape)\n",
         "\n",
-        "    cache = Z\n",
-        "    return A, cache\n",
+        "    return A, Z\n",
         "\n",
         "\n",
         "def sigmoid_backward(dA, cache):\n",
@@ -330,8 +324,6 @@
         "\n",
         "    s = 1/(1+np.exp(-Z))\n",
         "    dZ = dA * s * (1-s)\n",
-        "\n",
-        "    assert (dZ.shape == Z.shape)\n",
         "\n",
         "    return dZ\n",
         "\n",
@@ -354,14 +346,12 @@
         "    # When z <= 0, you should set dz to 0 as well.\n",
         "    dZ[Z <= 0] = 0\n",
         "\n",
-        "    assert (dZ.shape == Z.shape)\n",
-        "\n",
         "    return dZ"
       ],
       "metadata": {
         "id": "LoaQLcg86REJ"
       },
-      "execution_count": 32,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -400,8 +390,6 @@
         "    cache -- a python dictionary containing \"A\", \"W\" and \"b\" ; stored for computing the backward pass efficiently\n",
         "    \"\"\"\n",
         "    Z = W.dot(A) + b\n",
-        "\n",
-        "    assert(Z.shape == (W.shape[0], A.shape[1]))\n",
         "    cache = (A, W, b)\n",
         "\n",
         "    return Z, cache\n",
@@ -437,7 +425,6 @@
         "    else:\n",
         "        print(\"\\033[91mError! Please make sure you have passed the value correctly in the \\\"activation\\\" parameter\")\n",
         "\n",
-        "    assert (A.shape == (W.shape[0], A_prev.shape[1]))\n",
         "    cache = (linear_cache, activation_cache)\n",
         "\n",
         "    return A, cache\n",
@@ -473,14 +460,12 @@
         "    AL, cache = linear_activation_forward(A, parameters['W' + str(L)], parameters['b' + str(L)], activation = \"sigmoid\")\n",
         "    caches.append(cache)\n",
         "\n",
-        "    assert(AL.shape == (1,X.shape[1]))\n",
-        "\n",
         "    return AL, caches"
       ],
       "metadata": {
         "id": "_Uuub0RY4vEh"
       },
-      "execution_count": 33,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -515,16 +500,10 @@
         "    m = A_prev.shape[1]\n",
         "\n",
         "    dW = 1/m * np.dot(dZ,A_prev.T)\n",
-        "    db = 1/m * np.sum(dZ, axis = 1, keepdims = True)\n",
+        "    db = 1/m * np.sum(dZ, axis=1, keepdims=True)\n",
         "    dA_prev = np.dot(W.T,dZ)\n",
         "\n",
-        "    assert (dA_prev.shape == A_prev.shape)\n",
-        "    assert (dW.shape == W.shape)\n",
-        "    assert (db.shape == b.shape)\n",
-        "\n",
         "    return dA_prev, dW, db\n",
-        "\n",
-        "\n",
         "\n",
         "\n",
         "def linear_activation_backward(dA, cache, activation):\n",
@@ -591,17 +570,17 @@
         "    for l in reversed(range(L-1)):\n",
         "        # lth layer: (RELU -> LINEAR) gradients.\n",
         "        current_cache = caches[l]\n",
-        "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l + 1)], current_cache, activation = \"relu\")\n",
+        "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l+1)], current_cache, activation = \"relu\")\n",
         "        grads[\"dA\" + str(l)] = dA_prev_temp\n",
-        "        grads[\"dW\" + str(l + 1)] = dW_temp\n",
-        "        grads[\"db\" + str(l + 1)] = db_temp\n",
+        "        grads[\"dW\" + str(l+1)] = dW_temp\n",
+        "        grads[\"db\" + str(l+1)] = db_temp\n",
         "\n",
         "    return grads"
       ],
       "metadata": {
         "id": "xves54Cy8GIT"
       },
-      "execution_count": 34,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -645,7 +624,7 @@
       "metadata": {
         "id": "DWjdNEH97ejq"
       },
-      "execution_count": 35,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -688,7 +667,7 @@
       "metadata": {
         "id": "STS0yj5R9MDR"
       },
-      "execution_count": 36,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -730,8 +709,7 @@
         "    # Loop (gradient descent)\n",
         "    for i in range(0, num_iterations):\n",
         "\n",
-        "        # Forward propagation: [LINEAR -> RELU]*(L-1) -> LINEAR -> SIGMOID.\n",
-        "\n",
+        "        # Forward propagation: [LINEAR -> RELU]*(L-1) -> LINEAR -> SIGMOID\n",
         "        AL, caches = L_model_forward(X,parameters)\n",
         "\n",
         "        # Compute cost\n",
@@ -754,7 +732,7 @@
       "metadata": {
         "id": "sA6_WRhu4anD"
       },
-      "execution_count": 37,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -776,9 +754,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TQLPHBUe9oN1",
-        "outputId": "b2f13167-57d5-4de9-f4d2-c4ba50362abf"
+        "outputId": "353d4bbd-865e-49ba-b005-c671727fac0d"
       },
-      "execution_count": 41,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +808,7 @@
       "source": [
         "def predict(X, y, parameters):\n",
         "    \"\"\"\n",
-        "    This function is used to predict the results of a  L-layer neural network.\n",
+        "    This function is used to predict the results of a  L-layer neural network\n",
         "\n",
         "    Arguments:\n",
         "    X -- data set of examples you would like to label\n",
@@ -862,7 +840,7 @@
       "metadata": {
         "id": "GDCNqIfR-htT"
       },
-      "execution_count": 42,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -875,9 +853,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IFbrrlCu_Znc",
-        "outputId": "6d62a670-34f9-4329-bc8a-cd321e80687c"
+        "outputId": "2d962fd4-50d8-4e05-c0bd-dd22b3558a5a"
       },
-      "execution_count": 43,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,9 +876,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FneGl2cD_aWS",
-        "outputId": "af121e31-dafc-4613-9d90-3d6b1105bb5c"
+        "outputId": "741a4186-5b4f-41ab-a595-6a6a37514064"
       },
-      "execution_count": 44,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -910,15 +888,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "uZXYlFr9F4Tl"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
